Updated NavBar component styles: - Fixed JSX syntax errors - Made desktop Play dropdown work on hover - Changed text color and width of .playDropdown - Aligned text in .playDropdown to the right - Increased spacing between links in .playDropdown - Added white border around .playDropdown - Added spacing between Play link and divider in mobile menu

--- a/src/components/AuctionNoun/AuctionButton.module.css
+++ b/src/components/AuctionNoun/AuctionButton.module.css
@@ -24,7 +24,7 @@
   
   .input {
     font-family: 'Londrina Solid', sans-serif;
-    padding: 10px 20px;
+    padding: 16px 20px;
     width: 230px;
     font-size: 18px;
     border: 2px solid #e1d7d5;
